# streamlit

./: .egg-info  .pre-commit-config.yaml  Makefile  pyproject.toml
lib/: setup.py
streamlit/proto/: ArrowVegaLiteChart_pb2.py  BackMsg_pb2.py  Checkbox_pb2.py  Metric_pb2.py  PageProfile_pb2.py  PlotlyChart_pb2.py
streamlit/static/: asset-manifest.json  index.html
streamlit/static/static/js/: 1.2272d699.chunk.js  5.ec923a02.chunk.js  6.813499a8.chunk.js  main.f12d555b.chunk.js  runtime-main.18fa8dc8.js
