[tool.poetry]
name = "streamlit"
version = "1.4.0"
description = ""
authors = ["Snowflake Inc <hello@streamlit.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
# streamlit = { file = "lib/dist/streamlit-1.14.0-py2.py3-none-any.whl"}
altair = ">=3.2.0"
blinker = ">=1.0.0"
cachetools= ">=4.0"
click = ">=7.0"
importlib-metadata = ">=1.4"
numpy = ">0"
packaging = ">=14.1"
pandas = ">=0.21.0"
pillow = ">=6.2.0"
protobuf= ">=3.12"
pyarrow = ">=4.0"
pydeck = ">=0.1.dev5"
pympler = ">=0.9"
python-dateutil = ">0"
requests = ">=2.4"
rich = ">=10.11.0"
semver = ">0"
toml = ">0"
tornado = ">=5.0"
typing-extensions = ">=3.10.0.0"
tzlocal = ">=1.1"
validators = ">=0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
